--- a/designer.html
+++ b/designer.html
@@ -5,6 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>designer</title>
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+
+    <!-- metas -->
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+    <meta name="description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="keywords" content="design, animation, photography, web development, Broccoli Design, Jing-An Chen, portfolio">
+    <meta name="author" content="Jing-An Chen">
+    <meta name="robots" content="index, follow">
+    <meta name="image" content="url-to-your-thumbnail-image.jpg">
+    
+    <!-- Open Graph meta tags for better social media sharing -->
+    <meta property="og:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta property="og:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta property="og:image" content="url-to-your-thumbnail-image.jpg">
+    <meta property="og:url" content="url-to-your-website">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card meta tags for better social media sharing on Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta name="twitter:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="twitter:image" content="url-to-your-thumbnail-image.jpg">
+
+    <!-- styles -->
     <!-- NES library -->
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet">
     <!-- animate library -->
@@ -155,19 +179,19 @@
                     to express innovative design ideas and aesthetics.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/sq49/sq_49.jpg">
-                        <source media="(min-width: 465px)" srcset="media/sq49/sq_49_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq49/sq_49_s.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq49/sq_49_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq49/sq_49_m.jpg, media/sq49/sq_49_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq49/sq_49.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/sq48/sq_48.jpg">
-                        <source media="(min-width: 465px)" srcset="media/sq48/sq_48_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq48/sq_48_s.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq48/sq_48_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq48/sq_48_m.jpg, media/sq48/sq_48_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq48/sq_48.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/sq44/sq_44.jpg">
-                        <source media="(min-width: 465px)" srcset="media/sq44/sq_4s_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq44/sq_44_s.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq44/sq_44_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq44/sq_4s_m.jpg, media/sq44/sq_44_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq44/sq_44.jpg" alt="">
                     </picture>
                 </div>
             </div>
@@ -183,21 +207,21 @@
                     problem-solving, and managing multiple projects to ensure timely completion. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/m19_logo/m19_logo.jpg">
-                        <source media="(max-width: 465px)" srcset="media/m19_logo/m19_logo_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_logo/m19_logo_s.jpg"
+                        <source media="(max-width: 650px)" srcset="media/m19_logo/m19_logo_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/m19_logo/m19_logo_m.jpg, media/m19_logo/m19_logo_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_logo/m19_logo.jpg"
                             alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/m19_life/m19_life.png">
-                        <source media="(max-width: 465px)" srcset="media/m19_life/m19_life_m.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_life/m19_life_s.png"
+                        <source media="(max-width: 650px)" srcset="media/m19_life/m19_life_m.png">
+                        <source media="(max-width: 465px)" srcset="media/m19_life/m19_life_m.png, media/m19_life/m19_life_s.png">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_life/m19_life.png"
                             alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/m19_event/m19_event.png">
-                        <source media="(max-width: 465px)" srcset="media/m19_event/m19_event_m.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_event/m19_event_s.png"
+                        <source media="(max-width: 650px)" srcset="media/m19_event/m19_event_m.png">
+                        <source media="(max-width: 465px)" srcset="media/m19_event/m19_event_m.png, media/m19_event/m19_event_s.png">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_event/m19_event.png"
                             alt="">
                     </picture>
                 </div>
@@ -214,21 +238,21 @@
                     collaborations. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq14/sq_14.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq14/sq_14_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq14/sq_14_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq14/sq_14_s.jpg"
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq14/sq_14.jpg"
                             alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq32/sq_32.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq32/sq_32_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq32/sq_32_s.jpg"
+                        <source media="(max-width: 650px)" srcset="media/sq32/sq_32_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq32/sq_32_m.jpg, media/sq32/sq_32_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq32/sq_32.jpg"
                             alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq56/sq_56.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq56/sq_56_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq56/sq_56_s.jpg"
+                        <source media="(max-width: 650px)" srcset="media/sq56/sq_56_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq56/sq_56_m.jpg, media/sq32/sq_32_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq56/sq_56.jpg"
                             alt="">
                     </picture>
                 </div>
@@ -246,26 +270,30 @@
                     mastering new skills within just one week.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq37/sq_37.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq37/sq_37_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq37/sq_37_s.jpg"
+                        <source media="(max-width: 650px)" srcset="media/sq37/sq_37_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq37/sq_37_m.jpg, media/sq37/sq_37_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq37/sq_37.jpg"
                             alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq46/sq_46.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq46/sq_46_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq46/sq_46_s.jpg"
+                        <source media="(max-width: 650px)" srcset="media/sq46/sq_46_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq46/sq_46_m.jpg, media/sq46/sq_46_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq46/sq_46.jpg"
                             alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq51/sq_51.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq51/sq_51_m.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq51/sq_51_s.jpg"
+                        <source media="(max-width: 650px)" srcset="media/sq51/sq_51_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq51/sq_51_m.jpg, media/sq51/sq_51_s.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq51/sq_51.jpg"
                             alt="">
                     </picture>
                 </div>
             </div>
         </section>
+        <!-- blank space -->
+        <div>
+            <span class="display-1">&nbsp;</span>
+        </div>
     </main>
     <footer class="animate__animated animate__fadeIn animate__delay-1s d-flex flex-row justify-content-center">
         <button class="nes-btn is-rounded back" onclick="backHome()">Go Back</button>
