--- a/developer.html
+++ b/developer.html
@@ -5,6 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer</title>
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+
+    <!-- metas -->
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+    <meta name="description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="keywords" content="design, animation, photography, web development, Broccoli Design, Jing-An Chen, portfolio">
+    <meta name="author" content="Jing-An Chen">
+    <meta name="robots" content="index, follow">
+    <meta name="image" content="url-to-your-thumbnail-image.jpg">
+    
+    <!-- Open Graph meta tags for better social media sharing -->
+    <meta property="og:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta property="og:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta property="og:image" content="url-to-your-thumbnail-image.jpg">
+    <meta property="og:url" content="url-to-your-website">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card meta tags for better social media sharing on Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta name="twitter:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="twitter:image" content="url-to-your-thumbnail-image.jpg">
+
+    <!-- styles -->
     <!-- NES library -->
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet">
     <!-- animate library -->
@@ -173,22 +197,22 @@
                 <p>If being full-stack means a developer can handle front-end and back-end development, then Jing-An goes beyond that. He excels in design, front-end, back-end, and digital marketing simultaneously. With an insatiable thirst for knowledge throughout his career, Jing-An's energy makes him the best support for all his coworkers.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(min-width: 650px)" srcset="media/other5/other_5.jpg">
+                        <source media="(min-width: 465px)" srcset="media/other5/other_5_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other5/other_5_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(min-width: 650px)" srcset="media/other6/other_6.jpg">
+                        <source media="(min-width: 465px)" srcset="media/other6/other_6_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other6/other_6_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(min-width: 650px)" srcset="media/figma/figma.png">
+                        <source media="(min-width: 465px)" srcset="media/figma/figma_m.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/figma/figma_s.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -199,22 +223,22 @@
                 <p>Throughout Jing-An's career, startup companies unequivocally endorse him. He leverages his design expertise to assist startup owners in clarifying their positions and niches in the market. With his robust development skills, he customizes the most suitable brand websites for each client. This unique advantage positions Jing-An not only as a web developer but also as a brand maker. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other13/other_13.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other13/other_13_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other13/other_13_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other20/other_20.png">
+                        <source media="(max-width: 465px)" srcset="media/other20/other_20_m.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other20/other_20_s.png" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other21/other_21.png">
+                        <source media="(max-width: 465px)" srcset="media/other21/other_21_m.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other21/other_21_s.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -225,26 +249,30 @@
                 <p>During Jing-An's university days, he came across an article by industrial designer Richard Sapper, which greatly influenced him. From that point on, Jing-An became a designer who emphasized the interaction between users and products. Combining this focus with his personal hobby of comedy, Jing-An developed a motto: 'When it comes to design, humor matters.' He believes that a good design is akin to a good joke—people can engage with it, enjoy it repeatedly, and ideally, discover new experiences with each interaction. This perspective led Jing-An into the world of web design, as he sees websites as the ultimate interactive product that people can play with.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other3/other_3.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other3/other_3_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other3/other_3_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/m19co/m19co.png">
+                        <source media="(max-width: 465px)" srcset="media/m19co/m19co_m.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/m19co/m19co_s.png" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/m19bit/m19bit.png">
+                        <source media="(max-width: 465px)" srcset="media/m19bit/m19bit_m.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/m19bit/m19bit_s.png" alt="">
                     </picture>
                 </div>
             </div>
         </section>
+        <!-- blank space -->
+        <div>
+            <span class="display-1">&nbsp;</span>
+        </div>
     </main>
     <footer class="animate__animated animate__fadeIn animate__delay-1s  d-flex flex-row justify-content-center">
         <button class="nes-btn is-rounded back" onclick="backHome()">Go Back</button>
