--- a/hire.html
+++ b/hire.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Jing-An</title>
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+
+    <!-- metas -->
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+    <meta name="description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="keywords" content="design, animation, photography, web development, Broccoli Design, Jing-An Chen, portfolio">
+    <meta name="author" content="Jing-An Chen">
+    <meta name="robots" content="index, follow">
+    <meta name="image" content="url-to-your-thumbnail-image.jpg">
+    
+    <!-- Open Graph meta tags for better social media sharing -->
+    <meta property="og:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta property="og:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta property="og:image" content="url-to-your-thumbnail-image.jpg">
+    <meta property="og:url" content="url-to-your-website">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card meta tags for better social media sharing on Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta name="twitter:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="twitter:image" content="url-to-your-thumbnail-image.jpg">
+
+    <!-- styles -->
     <!-- NES library -->
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet">
     <!-- animate library -->
@@ -17,6 +41,7 @@
 </head>
 
 <body>
+    <a class="nes-btn skipBtn" onclick="window.open('tel:+13439884869');">CALL JING-AN</a>
     <div class="coinBg animate__animated animate__zoomIn animate__delay-1.1s">
         <i class="nes-icon coin"></i>
         <i class="nes-icon coin"></i>
@@ -73,7 +98,7 @@
             <i class="nes-icon linkedin is-middle" onclick="openLinkedIn()"></i>
             <i class="nes-icon whatsapp is-middle" onclick="openWhatsApp()"></i>
         </div>
-        <button type="button" class="nes-btn" onclick="backHome()">Call Jing-An</button>
+        <button type="button" class="nes-btn" onclick="window.open('tel:+13439884869');">Call Jing-An</button>
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
