--- a/photographer.html
+++ b/photographer.html
@@ -5,6 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photographer</title>
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+
+    <!-- metas -->
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+    <meta name="description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="keywords" content="design, animation, photography, web development, Broccoli Design, Jing-An Chen, portfolio">
+    <meta name="author" content="Jing-An Chen">
+    <meta name="robots" content="index, follow">
+    <meta name="image" content="url-to-your-thumbnail-image.jpg">
+    
+    <!-- Open Graph meta tags for better social media sharing -->
+    <meta property="og:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta property="og:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta property="og:image" content="url-to-your-thumbnail-image.jpg">
+    <meta property="og:url" content="url-to-your-website">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card meta tags for better social media sharing on Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta name="twitter:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="twitter:image" content="url-to-your-thumbnail-image.jpg">
+
+    <!-- styles -->
     <!-- NES library -->
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet">
     <!-- animate library -->
@@ -156,22 +180,22 @@
                 <p>Little did they know, Jing-An's first job was as a commercial photographer and social media manager for a disposable tableware firm called JFY Retailer. Despite limited resources—a cheap smartphone and basic tools—he transformed ordinary tableware into captivating commercial photos, marketing materials, and social media posts. Jing-An's success was undeniable! Today, he effortlessly creates stunning photos for any subject and continues to serve JFY Retailer as their contracted photographer. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(min-width: 650px)" srcset="media/sq56/sq_56.jpg">
+                        <source media="(min-width: 465px)" srcset="media/sq56/sq_56_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq56/sq_56_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(min-width: 650px)" srcset="media/sq24/sq_24.jpg">
+                        <source media="(min-width: 465px)" srcset="media/sq24/sq_24_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq24/sq_24_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(min-width: 650px)" srcset="media/sq22/sq_22.jpg">
+                        <source media="(min-width: 465px)" srcset="media/sq22/sq_22_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq22/sq_22_s.jpg" alt="">
                     </picture>
                 </div>
             </div>
@@ -182,22 +206,22 @@
                 <p>Today, Jing-An is a successful photographer, capturing commercial photos for various firms such as Capital E, a Taiwanese bag retailer. Additionally, he volunteers as a photographer at Algonquin College, creating numerous photos and albums for various events. Jing-An also manages the Instagram account Ottawa Free Photos, offering free photo services for tourists in Ottawa.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq6/sq_6.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq6/sq_6_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq6/sq_6_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq4/sq_4.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq4/sq_4_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq4/sq_4_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other22/other_22.png">
+                        <source media="(max-width: 465px)" srcset="media/other22/other_22_m.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other22/other_22_s.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -208,26 +232,30 @@
                 <p>Jing-An's passion for cinema was ignited by his director aunt. He previously worked at an award-winning film firm in Taiwan called Green Film Production, where he contributed to various aspects of movie production, including artistic design, advertising, poster design, filming, and post-production. Jing-An harbors a personal dream of creating his own animated movie and has already produced numerous commercial animations for himself and various firms.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq1/sq_1.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq1/sq_1_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq1/sq_1_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq57/sq_57.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq57/sq_57_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/sq57/sq_57_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other16/other_16.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other16/other_16_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                            src="media/other16/other_16_s.jpg" alt="">
                     </picture>
                 </div>
             </div>
         </section>
+        <!-- blank space -->
+        <div>
+            <span class="display-1">&nbsp;</span>
+        </div>
     </main>
     <footer class="animate__animated animate__fadeIn animate__delay-1s  d-flex flex-row justify-content-center">
         <button class="nes-btn is-rounded back" onclick="backHome()">Go Back</button>
