--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 
 <head>
+        <!-- GA code -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-27HXTW4BCM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-27HXTW4BCM');
+    </script>
+<!-- SEOs -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jing-An Chen</title>
+    <!-- metas -->
+    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
+    <meta name="description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="keywords" content="design, animation, photography, web development, Broccoli Design, Jing-An Chen, portfolio">
+    <meta name="author" content="Jing-An Chen">
+    <meta name="robots" content="index, follow">
+    <meta name="image" content="url-to-your-thumbnail-image.jpg">
+    
+    <!-- Open Graph meta tags for better social media sharing -->
+    <meta property="og:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta property="og:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta property="og:image" content="url-to-your-thumbnail-image.jpg">
+    <meta property="og:url" content="url-to-your-website">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card meta tags for better social media sharing on Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Broccoli Design - Jing-An Chen's Portfolio">
+    <meta name="twitter:description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
+    <meta name="twitter:image" content="url-to-your-thumbnail-image.jpg">
+
+    <!-- styles -->
     <!-- NES library -->
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet">
     <!-- animate library -->
@@ -16,6 +49,7 @@
 </head>
 
 <body>
+    <a class="nes-btn skipBtn" onclick="desPage()">SKIP</a>
     <!-- svg background -->
     <div class="frontBg">
         <svg viewBox="0 0 1920 1080">
